fix(swarm): read more button shows on mobile

--- a/app/client/stylesheets/components/pu-explorer.sass
+++ b/app/client/stylesheets/components/pu-explorer.sass
@@ -67,7 +67,13 @@
         bottom: 0
         width: 100%
         padding-bottom: 10px
-        display: none
+        display: block
+
+        > .pu-button
+            text-decoration: underline
+
+            i
+                display: none
 
     @media screen and (min-width: $breakpoint-desktop) and (min-height: $breakpoint-tablet - 100px)
         padding: 4vh 0px 8vh 0px
@@ -84,3 +90,8 @@
         footer
             display: block
             padding-bottom: 4vh
+
+            > .pu-button
+                text-decoration: none
+                i
+                    display: block
